Bug 131193 - Impress File saved as .ppt (Powerpoint 97-2003) in 6.4 doesn't open in MS Powerpoint Viewer and Protected View in MSO
Summary: Impress File saved as .ppt (Powerpoint 97-2003) in 6.4 doesn't open in MS Pow...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords: bibisected, bisected, filter:ppt, regression
Depends on:
Blocks:
 
Reported: 2020-03-07 01:24 UTC by Jeremy
Modified: 2020-04-18 21:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Basic Impress file, as ~.odp (2.01 MB, application/vnd.oasis.opendocument.presentation)
2020-03-07 19:10 UTC, Jeremy
Details
Same file, saved under LO 6.4 as MS Powerpoint 97-2003 .ppt file (2.18 MB, application/vnd.ms-powerpoint)
2020-03-07 19:15 UTC, Jeremy
Details
Same file, saved under LO 6.3.4 (on Windows) as MS Powerpoint 97-2003 .ppt file (2.18 MB, application/vnd.ms-powerpoint)
2020-03-10 11:23 UTC, Jeremy
Details
Minimized sample ODP (30.45 KB, application/vnd.oasis.opendocument.presentation)
2020-04-15 14:07 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy 2020-03-07 01:24:11 UTC
Description:
After creating an Impress file presentation in LO 6.4.1.2 and saving it as a .ppt file, Powerpoint 97-2003 format, on attempting to open it with MS Office Powerpoint Viewer 2010 (14.0.7214.5000), it doesn't: I get message 'Office has detected a problem with file. To help protect your computer this file cannot be opened'.
My operating system: Windows 10 1909.
Note: no problem encountered after saving (same file) as .pptx (Powerpoint 2007-365 format); or opening and resaving it with LO 6.3.4.2

Steps to Reproduce:
1. Create/update and then minimise Impress preentation. Save as ~.odp file.
2. Save as Powerpoint 97-2003 (.ppt) file.
3. Open ~.ppt file with Powerpoint Viewer 2010

Actual Results:
File did not open in Powerpoint Viewer, got error message 'Office has detected a problem...'

Alternatively, have had a 'This filetype is unsupported' on attempting to open with PPT Viewer other, similar files saved as ~.ppt in LO 6.4.1 (were previously ~.odp) 

Expected Results:
File should open and be viwable in Powerpoint Viewer.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
LO Version: 6.4.1.2 (x64)
Build ID: 4d224e95b98b138af42a64d84056446d09082932
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-GB
Calc: threaded

OS Name	Microsoft Windows 10 Pro
Version	10.0.18363 Build 18363

Microsoft Powerpoint Viewer 14.0.7214.5000 MSO (14.0.7237.5000)

No problem when file saved in Powerpoint 2007-365 (.pptx) format.
No problem when file saved with LO 6.3.4.2 (as ~.ppt)

I have gone from LO 6.3.4 to 6.4.1.2 (did not use 6.4.0)
Comment 1 Jeremy 2020-03-07 01:28:43 UTC
A correction: 'This filetype is unsupported ...' variant down to trying to open with PPT Viewer while file still open in LO.
Comment 2 Jeremy 2020-03-07 19:10:26 UTC
Created attachment 158477 [details]
Basic Impress file, as ~.odp
Comment 3 Jeremy 2020-03-07 19:15:34 UTC
Created attachment 158478 [details]
Same file, saved under LO 6.4 as MS Powerpoint 97-2003 .ppt file

This is the version with the problem, saved from .odp file in LO 6.4.1.2 and does not open in PowerPoint Viewer 2010.
Comment 4 Oliver Grimm 2020-03-07 21:15:12 UTC
Both files open fine in "MS Office online" here.
Cannot check with MS Powerpoint Viewer though, since I do not have that software.
Comment 5 Timur 2020-03-10 10:12:56 UTC
ODP is 18 slides with images, as are PPT and PPTX. 
IMO Powerpoint Viewer is not relevant, but Powerpoint is.

MS Office Powerpoint 2016 opens PPT in Protected View with the message:
'Office has detected a problem with file. Editing may harm your computer. Click for more details'.
There are no real details and reasons. But we can "Edit Anyway".

No message in MSO with PPTX.

https://docs.microsoft.com/en-us/office/troubleshoot/error-messages/office-file-fails-validation
"Office File Validation is a feature that performs security checks on files.. 
A trusted location is a folder on your computer or on a network.. 
Files from the Internet and from other potentially unsafe locations may contain viruses, worms, or other kinds of malware..
To help protect your computer, Office 2010 opens files from these potentially unsafe locations in Protected View."

PPT is binary format. I guess MSO knows that virus can be hidden in image. And it's not saved locally. And it surely knows it's last edited with non-MSO. 

So this is not about LO but about MSO. 
Nothing we can do here, I'll close as NOB.
Comment 6 Timur 2020-03-10 10:15:17 UTC
I'll offer some workaround: if you will open presentation somewhere else read-only with Powerpoint Viewer, and if doesn't contain effects, you may rather export as PDF and not PPT.
Comment 7 Jeremy 2020-03-10 11:19:14 UTC
In reponse to Timur:

1) I disagree - version saved from LO 6.3 does not have same problem, and opens ok  in Powerpoint Viewer. I will upload this version shortly. So there is some (minor - files are same size) difference between the 6.3 and 6.4 saved versions that Powerpoint doesn't like => this issue is introduced by a change in LO 6.4, that causes the 6.4 type ppt file to fail validation. So unresolving bug. (Had older versions of LO had the same issue I might have accepted it).

2) File is saved as a .ppt, for use as in powerppoint (or powerpoint viewer) elsewhere (my opening it with PowerPoint Viewer is to check it, so it will be ok for this). So saving as a pdf is not a suitable get around.
Comment 8 Jeremy 2020-03-10 11:23:38 UTC
Created attachment 158543 [details]
Same file, saved under LO 6.3.4 (on Windows) as MS Powerpoint 97-2003 .ppt file

This version opens ok in PowerPoint Viewer (as does a version saved using LO 6.3.5 on Linux)
Comment 9 Timur 2020-03-10 13:19:36 UTC
OK, let accept your explanation and set regression. And keep your New (although normally you are not entitled to set New, just Unconfirmed).
Comment 10 Timur 2020-03-11 07:38:21 UTC
I bibisected this.

 31ff10c5fadf3edec28a122aac133bf8150002c9 is the first bad commit
commit 31ff10c5fadf3edec28a122aac133bf8150002c9
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jul 29 23:13:21 2019 +0200

    source d458adeed0c34fae26fe7f3d6ecc9b75b431922f
    
Previous:

commit b20bbcceef376286c45004f761f087b3344bfa47 (HEAD, refs/bisect/good-b20bbcceef376286c45004f761f087b3344bfa47)
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jul 29 23:12:47 2019 +0200

    source c26f2fcf82d549a6475e9e55cdffde901190635b

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=c26f2fcf82d549a6475e9e55cdffde901190635b..d458adeed0c34fae26fe7f3d6ecc9b75b431922f

Single

https://gerrit.libreoffice.org/plugins/gitiles/core/+/d458adeed0c34fae26fe7f3d6ecc9b75b431922f%5E!/


commit d458adeed0c34fae26fe7f3d6ecc9b75b431922f	[log]
author	Arkadiy Illarionov <qarkai@gmail.com>	Sat Jul 27 20:15:17 2019 +0300
committer	Arkadiy Illarionov <qarkai@gmail.com>	Mon Jul 29 18:45:04 2019 +0200
tree b594540ade488d97d14f93081161a3e77134db63
parent c26f2fcf82d549a6475e9e55cdffde901190635b [diff]

Simplify Sequence iterations in sd

Use range-based loops, STL and comphelper functions

Change-Id: If4b6d464fc393049dc8d7e5c3faf1cf66b6a369a
Reviewed-on: https://gerrit.libreoffice.org/76480
Tested-by: Jenkins
Reviewed-by: Arkadiy Illarionov <qarkai@gmail.com>




Note:

https://support.microsoft.com/en-us/help/979860/supported-versions-of-the-office-viewers
Microsoft discontinued the older versions of Office viewers:  Word Viewer (all versions), Excel Viewer (all versions), PowerPoint Viewer (all versions), Visio Viewer 2002/2003.

So really relevant is MSO.
Comment 11 Timur 2020-03-11 07:39:17 UTC
I add Arkadiy to CC, please take a look why this regression happens from your commit.
Comment 12 Commit Notification 2020-04-15 13:44:26 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b267650fd097f16d1b31c87a11a497294ad4ee42

tdf#131193: MSO PP complains about an ODP saved as PPT

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Aron Budea 2020-04-15 13:56:57 UTC
Closing as fixed, backport to 6.4 is on gerrit. I didn't want to get deep into PPT internals, so sadly no unit test for the fix.
Comment 14 Aron Budea 2020-04-15 14:07:24 UTC
Created attachment 159585 [details]
Minimized sample ODP

For anyone interested, attaching a cut down sample made from the original.
Comment 15 Commit Notification 2020-04-16 09:07:58 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/8bf8808c066704b55d518e807b645b7df11f1b5f

tdf#131193: MSO PP complains about an ODP saved as PPT

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Jeremy 2020-04-16 09:38:58 UTC
Many thanks. I will test it in 6.4.4 daily build tomorrow: looking at the timestamps (if I interpret them correctly), I don't think it's there quite yet.
Comment 17 Timur 2020-04-16 19:38:49 UTC
Verified in master.
Comment 18 Jeremy 2020-04-18 21:10:07 UTC
I've now tested 6.4.4 daily builds under Windows 10 and Linux (Mint/DEB), both ok.

Many thanks.