tdf#131193: ODP saved as PPT opens in protected mode in MSO PP

pPara was supposed to be the first paragraph, as before the
below commit.

Regression from d458adeed0c34fae26fe7f3d6ecc9b75b431922f

Change-Id: I50b993ff8f37fd5572d60fe5d103c3cf5e636a6b